--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
 
 <body>
     <div class="container">
+        <a href="index.html">
         <img class="titlepic" src="제목.png" alt="언니사자들">
+        </a>
         <ul class="cell">
             <li class="cell-1">한 줄 소개
-                <br><br><img class="언니사자사진" src="언니사자.jpeg" alt="언니사자들">
-                <blockquote> 저희는 언니사자들입니다. 고학번이지만 아기사자들입니다!</blockquote>
+                <blockquote> 저희는 언니사자들입니다. <br> 고학번이지만 아기사자들입니다!</blockquote>                
+                <img class="언니사자사진" src="언니사자.jpeg" alt="언니사자들">
             </li>
             
             <li class="cell-5">
